crates/vm/src/snapshots/mu_vm__tests__literals-9.snap
---
source: crates/vm/src/tests.rs
expression: snapshot
---
# Input:
[0, 1, 2]

# Result (success):
[0, 1, 2]

# Stdout:

