crates/vm/src/snapshots/mu_vm__tests__literals.snap
---
source: crates/vm/src/tests.rs
expression: snapshot
---
# Input:
none

# Result (success):
none

# Stdout:

