crates/vm/src/snapshots/mu_vm__tests__loops-2.snap
---
source: crates/vm/src/tests.rs
expression: snapshot
---
# Input:
i := 0
while i < 10:
  print i
  i += 1


# Result (success):
false

# Stdout:
0
1
2
3
4
5
6
7
8
9

