crates/vm/src/snapshots/mu_vm__tests__loops-3.snap
---
source: crates/vm/src/tests.rs
expression: snapshot
---
# Input:
for i in 0..10:
  print i


# Result (success):
false

# Stdout:
0
1
2
3
4
5
6
7
8
9

