crates/vm/src/snapshots/mu_vm__tests__loops-6.snap
---
source: crates/vm/src/tests.rs
expression: snapshot
---
# Input:
start := 0
end := 10
for i in start..end:
  print i


# Result (success):
false

# Stdout:
0
1
2
3
4
5
6
7
8
9

