crates/vm/src/snapshots/mu_vm__tests__loops-7.snap
---
source: crates/vm/src/tests.rs
expression: snapshot
---
# Input:
start := 0
end := 10
for i in start..=end:
  print i


# Func:
function <[[main]]>:
  frame_size: 6
  length: 63
  const (length=2):
    0: "start"
    1: "end"
  code:
     0 | push_small_int value=0
     5 | store_global [0]
     7 | push_small_int value=10
    12 | store_global [1]
    14 | load_global [0]
    16 | store_reg r4
    18 | load_global [1]
    20 | store_reg r5
    22 | load_reg r5
    24 | cmp_le r4
    26 | jump_if_false offset=36
    28 | nop 
    29 | nop 
    30 | nop 
    31 | nop 
    32 | jump offset=21
    34 | nop 
    35 | nop 
    36 | nop 
    37 | nop 
    38 | push_small_int value=1
    43 | add r4
    45 | store_reg r4
    47 | jump_back offset=25
    49 | nop 
    50 | nop 
    51 | nop 
    52 | nop 
    53 | load_reg r4
    55 | print 
    56 | jump_back offset=18
    58 | nop 
    59 | nop 
    60 | nop 
    61 | nop 
    62 | suspend 


# Result (success):
false

# Stdout:
0
1
2
3
4
5
6
7
8
9
10

