crates/vm/src/snapshots/mu_vm__tests__loops-8.snap
---
source: crates/vm/src/tests.rs
expression: snapshot
---
# Input:
for i in 0..10:
  if i % 2 == 0: continue
  print i


# Result (success):
false

# Stdout:
1
3
5
7
9

